objects/Session_Time__c.object
<CustomObject>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Session_Time</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Session Time</relationshipLabel>
        <relationshipName>Session_Time</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration (Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Session Time</label>
    <nameField>
        <label>Session Time Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Session Time</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>